fix: code whitespace

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   min-height: 100vh;
   margin: 0 10%;
   padding: 0;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(180, 204, 186);
   color: rgb(0, 0, 0);
   box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.753) inset;
   font-size: 18px;
@@ -33,9 +33,14 @@ body {
   align-items: center;
   list-style: none;
 }
-
-.nav-link {
+.link {
   text-decoration: none;
+  transition: color 0.5s;
+}
+.link:hover {
+  color: rgb(77, 127, 168);
+}
+.nav-link {
   color: white;
   padding: 0 9px;
   line-height: 50px;
@@ -76,7 +81,17 @@ body {
 span {
   font-weight: bold;
 }
-
+.contact-link {
+  color: rgba(32, 179, 118, 0.829);
+  font-weight: bold;
+}
+.section-link {
+  color: rgba(32, 179, 118, 0.829);
+  font-weight: bold;
+}
+.gh-link {
+  color: white;
+}
 @media (max-width: 768px) {
   .section {
     width: 100%;
